--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>org.lorislab.maven</groupId>
 	<artifactId>maven-plugin-parent</artifactId>
 	<packaging>pom</packaging>
-	<version>1.0.1-SNAPSHOT</version>
+	<version>1.0.1</version>
 	<name>Maven plugins parent</name>
 	<description>Parent for maven lorislab plugins.</description>
 	<url>http://www.lorislab.org</url>
@@ -19,7 +19,7 @@
 		<connection>scm:git:https://github.com/lorislab/maven.git</connection>
 		<developerConnection>scm:git:git@github.com:lorislab/maven.git</developerConnection>
 		<url>https://github.com/lorislab/maven</url>
-		<tag>HEAD</tag>
+		<tag>maven-plugin-parent-1.0.1</tag>
 	</scm>
 		
 	<prerequisites>
