--- a/pom.xml
+++ b/pom.xml
@@ -1,154 +1,158 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project>
-    <modelVersion>4.0.0</modelVersion>
+	<modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.lorislab.maven</groupId>
-    <artifactId>maven-plugin-parent</artifactId>
-    <packaging>pom</packaging>
-    <version>1.0.1</version>
-    <name>Maven plugins parent</name>
-    <description>Parent for maven lorislab plugins.</description>
-    <url>http://www.lorislab.org</url>
+	<groupId>org.lorislab.maven</groupId>
+	<artifactId>maven-plugin-parent</artifactId>
+	<packaging>pom</packaging>
+	<version>1.0.1-SNAPSHOT</version>
+	<name>Maven plugins parent</name>
+	<description>Parent for maven lorislab plugins.</description>
+	<url>http://www.lorislab.org</url>
     
 	<modules>
 		<module>maven-plugin-lib</module>
 		<module>messagebundle-plugin</module>
 	</modules>
 	
-    <prerequisites>
-        <maven>2.2.1</maven>
-    </prerequisites>
+	<scm>
+		<connection>scm:git:https://github.com/lorislab/maven.git</connection>
+		<developerConnection>scm:git:git@github.com:lorislab/maven.git</developerConnection>
+		<url>https://github.com/lorislab/maven</url>
+		<tag>HEAD</tag>
+	</scm>
+		
+	<prerequisites>
+		<maven>2.2.1</maven>
+	</prerequisites>
 
-    <licenses>
-        <license>
-            <name>Apache License 2.0</name>
-            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
-        </license>
-    </licenses>
+	<licenses>
+		<license>
+			<name>Apache License 2.0</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+		</license>
+	</licenses>
     
-    <developers>
-        <developer>
-            <id>andrej</id>
-            <email>andrej@lorislab.org</email>
-            <organization>Ajka-Andrej</organization>
-        </developer>
-    </developers>
+	<developers>
+		<developer>
+			<id>andrej</id>
+			<email>andrej@lorislab.org</email>
+			<organization>Ajka-Andrej</organization>
+		</developer>
+	</developers>
         
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>        
-    </properties>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>        
+	</properties>
     
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>org.apache.maven</groupId>
-                <artifactId>maven-plugin-api</artifactId>
-                <version>2.2.1</version>
-                <scope>compile</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.apache.maven</groupId>
-                <artifactId>maven-project</artifactId>
-                <version>2.2.1</version>
-            </dependency>
-            <dependency>
-                <groupId>org.codehaus.plexus</groupId>
-                <artifactId>plexus-utils</artifactId>
-                <version>1.5.9</version>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.apache.maven</groupId>
+				<artifactId>maven-plugin-api</artifactId>
+				<version>2.2.1</version>
+				<scope>compile</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.maven</groupId>
+				<artifactId>maven-project</artifactId>
+				<version>2.2.1</version>
+			</dependency>
+			<dependency>
+				<groupId>org.codehaus.plexus</groupId>
+				<artifactId>plexus-utils</artifactId>
+				<version>1.5.9</version>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 
-    <build>
-        <plugins>
-            <plugin>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.3.2</version>
-                <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
-                    <encoding>UTF-8</encoding>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-source-plugin</artifactId>
-                <version>2.1.2</version>
-                <inherited>true</inherited>
-                <executions>
-                    <execution>
-                        <id>attach-sources</id>
-                        <goals>
-                            <goal>jar</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.7</version>
-                <inherited>true</inherited>
-                <executions>
-                    <execution>
-                        <phase>site</phase>
-                        <goals>
-                            <goal>javadoc</goal>
-                        </goals>
-                        <configuration>
-                            <aggregate>true</aggregate>
-                            <links>
-                                <link>http://download.oracle.com/javase/6/docs/api/</link>
-                                <link>http://download.oracle.com/javase/7/docs/api/</link>
-                            </links>
-                            <tagletArtifacts>
-                                <tagletArtifact>
-                                    <groupId>org.apache.maven.plugin-tools</groupId>
-                                    <artifactId>maven-plugin-tools-javadoc</artifactId>
-                                    <version>2.9</version>
-                                </tagletArtifact>
-                            </tagletArtifacts>                            
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>attach-doc</id>
-                        <phase>verify</phase>
-                        <goals>
-                            <goal>jar</goal>
-                        </goals>
-                        <configuration>
-                            <aggregate>true</aggregate>
-                            <links>
-                                <link>http://download.oracle.com/javase/6/docs/api/</link>
-                                <link>http://download.oracle.com/javase/7/docs/api/</link>
-                            </links>
-                            <tagletArtifacts>
-                                <tagletArtifact>
-                                    <groupId>org.apache.maven.plugin-tools</groupId>
-                                    <artifactId>maven-plugin-tools-javadoc</artifactId>
-                                    <version>2.9</version>
-                                </tagletArtifact>
-                            </tagletArtifacts>                            
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <version>2.3.1</version>
-                <configuration>
-                    <archive>
-                        <manifest>
-                            <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
-                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
-                        </manifest>
-                        <manifestEntries>
-                            <Implementation-URL>${project.url}</Implementation-URL>
-                        </manifestEntries>
-                    </archive>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
+	<build>
+		<plugins>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.3.2</version>
+				<configuration>
+					<source>1.6</source>
+					<target>1.6</target>
+					<encoding>UTF-8</encoding>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<version>2.2.1</version>
+				<inherited>true</inherited>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>2.9.1</version>
+				<inherited>true</inherited>
+				<configuration>
+					<aggregate>true</aggregate>
+					<links>
+						<link>http://java.sun.com/javase/7/docs/api/</link>
+						<link>http://java.sun.com/javaee/6/docs/api/</link>
+					</links>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>2.3.1</version>
+				<configuration>
+					<archive>
+						<manifest>
+							<addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
+							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+						</manifest>
+						<manifestEntries>
+							<Implementation-URL>${project.url}</Implementation-URL>
+						</manifestEntries>
+					</archive>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+	
+	<profiles>
+		<profile>
+			<id>release</id>
+			<build>
+				<plugins>
+					<plugin>
+						<artifactId>maven-source-plugin</artifactId>
+						<executions>
+							<execution>
+								<id>attach-sources</id>
+								<goals>
+									<goal>jar</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+						<artifactId>maven-javadoc-plugin</artifactId>
+						<executions>
+							<execution>
+								<id>attach-javadocs</id>
+								<goals>
+									<goal>jar</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
+	
+	<distributionManagement>
+		<repository>
+			<id>bintray</id>
+			<url>https://api.bintray.com/maven/lorislab/maven/maven</url>
+		</repository>
+	</distributionManagement>
+
+		
 </project>
