--- a/jboss-server-plugin/pom.xml
+++ b/jboss-server-plugin/pom.xml
@@ -12,7 +12,7 @@
     <parent>
 		<groupId>org.lorislab.maven</groupId>
 		<artifactId>maven-plugin-parent</artifactId>
-        <version>1.0.2</version>
+        <version>1.0.3-SNAPSHOT</version>
 		<relativePath>../</relativePath>
     </parent>
 
