--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>org.lorislab.maven</groupId>
 	<artifactId>maven-plugin-parent</artifactId>
 	<packaging>pom</packaging>
-	<version>1.0.3</version>
+	<version>1.0.4-SNAPSHOT</version>
 	<name>Maven plugins parent</name>
 	<description>Parent for maven lorislab plugins.</description>
 	<url>http://www.lorislab.org</url>
@@ -20,7 +20,7 @@
 		<connection>scm:git:https://github.com/lorislab/maven.git</connection>
 		<developerConnection>scm:git:git@github.com:lorislab/maven.git</developerConnection>
 		<url>https://github.com/lorislab/maven</url>
-		<tag>maven-plugin-parent-1.0.3</tag>
+		<tag>HEAD</tag>
 	</scm>
 		
 	<prerequisites>
