--- a/messagebundle-plugin/pom.xml
+++ b/messagebundle-plugin/pom.xml
@@ -1,35 +1,40 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+	<modelVersion>4.0.0</modelVersion>
 
-    <artifactId>messagebundles-plugin</artifactId>
-    <packaging>maven-plugin</packaging>
+	<artifactId>messagebundles-plugin</artifactId>
+	<packaging>maven-plugin</packaging>
 
-    <name>Message Bundle plugin</name>
-    <description>This plugin copy messsage bundle language - default.</description>
+	<name>Message Bundle plugin</name>
+	<description>This plugin copy messsage bundle language - default.</description>
 
-    <!-- Project parent -->
-    <parent>
+	<!-- Project parent -->
+	<parent>
 		<groupId>org.lorislab.maven</groupId>
 		<artifactId>maven-plugin-parent</artifactId>
-        <version>1.0.2-SNAPSHOT</version>
+		<version>1.0.2-SNAPSHOT</version>
 		<relativePath>../</relativePath>
-    </parent>
+	</parent>
 
-    <dependencies>
-        <dependency>
-            <groupId>org.apache.maven</groupId>
-            <artifactId>maven-plugin-api</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.lorislab.maven</groupId>
-            <artifactId>maven-plugin-lib</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.codehaus.plexus</groupId>
-            <artifactId>plexus-utils</artifactId>
-        </dependency>
-    </dependencies>
+	<dependencies>
+		<dependency>
+			<groupId>org.apache.maven</groupId>
+			<artifactId>maven-plugin-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.lorislab.maven</groupId>
+			<artifactId>maven-plugin-lib</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.codehaus.plexus</groupId>
+			<artifactId>plexus-utils</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.maven.plugin-tools</groupId>
+			<artifactId>maven-plugin-annotations</artifactId>
+			<scope>compile</scope>
+		</dependency>		
+	</dependencies>
 	    
 </project>
