--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
 	<modules>
 		<module>maven-plugin-lib</module>
 		<module>messagebundle-plugin</module>
+		<module>jboss-server-plugin</module>
 	</modules>
 	
 	<scm>
@@ -37,7 +38,7 @@
 		<developer>
 			<id>andrej</id>
 			<email>andrej@lorislab.org</email>
-			<organization>Ajka-Andrej</organization>
+			<organization>lorislab.org</organization>
 		</developer>
 	</developers>
         
@@ -48,20 +49,26 @@
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
+				<groupId>org.apache.maven.plugin-tools</groupId>
+				<artifactId>maven-plugin-annotations</artifactId>
+				<version>3.2</version>
+				<scope>compile</scope>
+			</dependency>		
+			<dependency>
 				<groupId>org.apache.maven</groupId>
 				<artifactId>maven-plugin-api</artifactId>
 				<version>2.2.1</version>
-				<scope>compile</scope>
+				<scope>compile</scope>			
 			</dependency>
 			<dependency>
 				<groupId>org.apache.maven</groupId>
 				<artifactId>maven-project</artifactId>
-				<version>2.2.1</version>
+				<version>2.0.11</version>
 			</dependency>
 			<dependency>
 				<groupId>org.codehaus.plexus</groupId>
 				<artifactId>plexus-utils</artifactId>
-				<version>1.5.9</version>
+				<version>3.0.17</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
@@ -78,13 +85,11 @@
 				</configuration>
 			</plugin>
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-source-plugin</artifactId>
 				<version>2.2.1</version>
 				<inherited>true</inherited>
 			</plugin>
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
 				<version>2.9.1</version>
 				<inherited>true</inherited>
@@ -97,7 +102,6 @@
 				</configuration>
 			</plugin>
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
 				<version>2.3.1</version>
 				<configuration>
@@ -112,6 +116,22 @@
 					</archive>
 				</configuration>
 			</plugin>
+			<plugin>
+				<artifactId>maven-plugin-plugin</artifactId>
+				<version>3.2</version>
+				<configuration>
+					<skipErrorNoDescriptorsFound>true</skipErrorNoDescriptorsFound>
+				</configuration>
+				<executions>
+					<execution>
+						<id>mojo-descriptor</id>
+						<phase>process-classes</phase>
+						<goals>
+							<goal>descriptor</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>					
 		</plugins>
 	</build>
 	
