--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,11 @@
 				<artifactId>plexus-utils</artifactId>
 				<version>3.0.17</version>
 			</dependency>
+			<dependency>
+				<groupId>commons-io</groupId>
+				<artifactId>commons-io</artifactId>
+				<version>2.4</version>
+			</dependency>			
 		</dependencies>
 	</dependencyManagement>
 
