--- a/messagebundle-plugin/pom.xml
+++ b/messagebundle-plugin/pom.xml
@@ -12,7 +12,7 @@
 	<parent>
 		<groupId>org.lorislab.maven</groupId>
 		<artifactId>maven-plugin-parent</artifactId>
-		<version>1.0.4-SNAPSHOT</version>
+		<version>1.0.4</version>
 		<relativePath>../</relativePath>
 	</parent>
 
