--- a/maven-plugin-lib/pom.xml
+++ b/maven-plugin-lib/pom.xml
@@ -11,7 +11,7 @@
     <parent>
 		<groupId>org.lorislab.maven</groupId>
 		<artifactId>maven-plugin-parent</artifactId>
-        <version>1.0.4</version>
+        <version>1.0.5-SNAPSHOT</version>
 		<relativePath>../</relativePath>
     </parent>
 
